# CPythonWOEP

./: CMakeLists.txt  cpython.cmake
.github/workflows/: build.yml
